--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ transition: define a transição entre diferentes estados de um elemento (por ex
 }
 
 .wrapper {
-  height: 90vh;
+  
   width: 100vw;
 }
 
@@ -52,7 +52,7 @@ img {
   position: relative;
   width: 310px;
   top: 10%;
-  right: 90px;
+  
 
 }
 
@@ -126,21 +126,22 @@ header {
     width: 100%;
     height: 50%;
     padding: 0;
-    margin: 0;
+    margin-top: 25px;
   }
 
   .container-right {
     display: block;
-    height: auto;
+    height: 50%;
     width: 100%;
     position: static;
     background-size: cover;
     padding: 40px;
+    margin-top: 65px;
   }
 
   img {
     position: static;
-    max-width: 90%;
+    max-width: 70%;
   }
 
   header {
@@ -172,11 +173,13 @@ header {
 @media screen and (max-width:330px) {
 
   .container-left {
-    height: 70%;
+    height: 50%;
 
   }
 
-
+.container-right {
+  height: 50%;
+}
 
   
 }
